@@ -68,7 +68,12 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
   public:
     // Constructor, destructor
+#if __cplusplus >= 201103L
+    strstreambuf() : strstreambuf(0) { }
+    explicit strstreambuf(streamsize __initial_capacity);
+#else
     explicit strstreambuf(streamsize __initial_capacity = 0);
+#endif
     strstreambuf(void* (*__alloc)(size_t), void (*__free)(void*));
 
     strstreambuf(char* __get, streamsize __n, char* __put = 0) throw ();
